chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9889,6 +9889,15 @@
   timeWait: 0 mins
   timeBuild: 35 mins
   timeTotal: 36 mins
+- name: devspaces-code-rhel8
+  tag: 3.12-65
+  taskId: 59203463
+  timeCreate: Wed Feb 21 17:33:20 2024
+  timeStart: Wed Feb 21 17:33:59 2024
+  timeFinish: Wed Feb 21 21:50:57 2024
+  timeWait: 0 mins
+  timeBuild: 256 mins
+  timeTotal: 257 mins
 - name: devspaces-operator-bundle
   tag: 3.12-162
   taskId: 59203705
@@ -9907,3 +9916,12 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-164
+  taskId: 59208195
+  timeCreate: Wed Feb 21 21:59:30 2024
+  timeStart: Wed Feb 21 22:00:05 2024
+  timeFinish: Wed Feb 21 22:03:29 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
