--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10294,3 +10294,30 @@
   timeWait: 1 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-udi-rhel8
+  tag: 3.13-4
+  taskId: 59240003
+  timeCreate: Thu Feb 22 22:31:11 2024
+  timeStart: Thu Feb 22 22:31:26 2024
+  timeFinish: Thu Feb 22 23:33:13 2024
+  timeWait: 0 mins
+  timeBuild: 61 mins
+  timeTotal: 62 mins
+- name: devspaces-server-rhel8
+  tag: 3.13-5
+  taskId: 59240912
+  timeCreate: Thu Feb 22 22:56:25 2024
+  timeStart: Thu Feb 22 22:57:03 2024
+  timeFinish: Thu Feb 22 23:07:50 2024
+  timeWait: 0 mins
+  timeBuild: 10 mins
+  timeTotal: 11 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-32
+  taskId: 59241321
+  timeCreate: Thu Feb 22 23:56:34 2024
+  timeStart: Thu Feb 22 23:56:41 2024
+  timeFinish: Fri Feb 23 00:00:21 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
