chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -9961,3 +9961,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-167
+  taskId: 59282263
+  timeCreate: Mon Feb 26 02:27:02 2024
+  timeStart: Mon Feb 26 02:27:36 2024
+  timeFinish: Mon Feb 26 02:31:28 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
