--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10006,26 +10006,6 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
-- name: devspaces-operator-bundle
-  tag: 3.12-170
-  taskId: 59403032
-  timeCreate: Thu Feb 29 11:42:13 2024
-  timeStart: Thu Feb 29 11:42:57 2024
-  timeFinish: Thu Feb 29 11:48:10 2024
-  timeWait: 0 mins
-  timeBuild: 5 mins
-  timeTotal: 5 mins
-
-- name: devspaces-imagepuller-rhel8
-  tag: 3.12-12
-  taskId: 59397385
-  timeCreate: Thu Feb 29 09:19:40 2024
-  timeStart: Thu Feb 29 09:19:51 2024
-  timeFinish: Thu Feb 29 09:32:54 2024
-  timeWait: 0 mins
-  timeBuild: 13 mins
-  timeTotal: 13 mins
-
 - name: devspaces-udi-rhel8
   tag: 3.12-13.1709155411
   taskId: 59382750
@@ -10035,7 +10015,6 @@
   timeWait: 0 mins
   timeBuild: 63 mins
   timeTotal: 64 mins
-
 - name: devspaces-udi-rhel8
   tag: 3.12-13.1709155413
   taskId: 59382751
@@ -10045,7 +10024,6 @@
   timeWait: 0 mins
   timeBuild: 62 mins
   timeTotal: 63 mins
-
 - name: devspaces-udi-rhel8
   tag: 3.12-13.1709155439
   taskId: 59382760
@@ -10055,4 +10033,39 @@
   timeWait: 0 mins
   timeBuild: 60 mins
   timeTotal: 61 mins
-
+- name: devspaces-imagepuller-rhel8
+  tag: 3.12-12
+  taskId: 59397385
+  timeCreate: Thu Feb 29 09:19:40 2024
+  timeStart: Thu Feb 29 09:19:51 2024
+  timeFinish: Thu Feb 29 09:32:54 2024
+  timeWait: 0 mins
+  timeBuild: 13 mins
+  timeTotal: 13 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-170
+  taskId: 59403032
+  timeCreate: Thu Feb 29 11:42:13 2024
+  timeStart: Thu Feb 29 11:42:57 2024
+  timeFinish: Thu Feb 29 11:48:10 2024
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-udi-rhel8
+  tag: 3.12-14
+  taskId: 59425416
+  timeCreate: Fri Mar 1 16:46:28 2024
+  timeStart: Fri Mar 1 16:47:05 2024
+  timeFinish: Fri Mar 1 17:50:04 2024
+  timeWait: 0 mins
+  timeBuild: 62 mins
+  timeTotal: 63 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-171
+  taskId: 59427032
+  timeCreate: Fri Mar 1 18:52:38 2024
+  timeStart: Fri Mar 1 18:53:15 2024
+  timeFinish: Fri Mar 1 18:56:29 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
