chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10105,3 +10105,12 @@
   timeWait: 5 mins
   timeBuild: 4 mins
   timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-174
+  taskId: 59579916
+  timeCreate: Fri Mar 8 19:30:06 2024
+  timeStart: Fri Mar 8 19:30:10 2024
+  timeFinish: Fri Mar 8 19:33:30 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
