--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10375,3 +10375,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.13-7
+  taskId: 59648438
+  timeCreate: Tue Mar 12 15:39:29 2024
+  timeStart: Tue Mar 12 15:40:43 2024
+  timeFinish: Tue Mar 12 16:18:07 2024
+  timeWait: 1 mins
+  timeBuild: 37 mins
+  timeTotal: 38 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-36
+  taskId: 59650749
+  timeCreate: Tue Mar 12 16:38:19 2024
+  timeStart: Tue Mar 12 16:45:20 2024
+  timeFinish: Tue Mar 12 16:49:27 2024
+  timeWait: 7 mins
+  timeBuild: 4 mins
+  timeTotal: 11 mins
