--- a/dependencies/che-plugin-registry/deploy/openshift/devspaces-plugin-registry.yaml
+++ b/dependencies/che-plugin-registry/deploy/openshift/devspaces-plugin-registry.yaml
@@ -117,10 +117,9 @@ parameters:
   - name: IMAGE
     value: registry.redhat.io/devspaces/pluginregistry-rhel8
     displayName: Red Hat OpenShift Dev Spaces plugin registry image
-    description: Red Hat OpenShift Dev Spaces plugin registry container image. Defaults
-      to registry.redhat.io/devspaces/pluginregistry-rhel8
+    description: Red Hat OpenShift Dev Spaces plugin registry container image. Defaults to registry.redhat.io/devspaces/pluginregistry-rhel8
   - name: IMAGE_TAG
-    value: '3.11'
+    value: '3.13'
     displayName: Red Hat OpenShift Dev Spaces plugin registry version
     description: Red Hat OpenShift Dev Spaces plugin registry version
   - name: MEMORY_LIMIT
