--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10411,3 +10411,21 @@
   timeWait: 30 mins
   timeBuild: 4 mins
   timeTotal: 35 mins
+- name: devspaces-operator
+  tag: 3.13-5
+  taskId: 59826879
+  timeCreate: Tue Mar 19 10:42:46 2024
+  timeStart: Tue Mar 19 10:44:15 2024
+  timeFinish: Tue Mar 19 11:03:13 2024
+  timeWait: 1 mins
+  timeBuild: 18 mins
+  timeTotal: 20 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-38
+  taskId: 59827346
+  timeCreate: Tue Mar 19 11:09:44 2024
+  timeStart: Tue Mar 19 11:11:27 2024
+  timeFinish: Tue Mar 19 11:15:53 2024
+  timeWait: 1 mins
+  timeBuild: 4 mins
+  timeTotal: 6 mins
