--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -319,15 +319,15 @@
       },
       "3.13": {
         "upstream_branch": [
-          "v2.9.10",
-          "v2.9.10"
+          "v2.11.0",
+          "v2.11.0"
         ],
         "disabled": false
       },
       "3.x": {
         "upstream_branch": [
-          "v2.9.10",
-          "v2.9.10"
+          "v2.11.0",
+          "v2.11.0"
         ],
         "disabled": false
       }
@@ -547,13 +547,13 @@
     "Errata": {
       "3.11": "125090",
       "3.12": "127262",
-      "3.13": "n/a",
+      "3.13": "129116",
       "3.x": "n/a"
     },
     "Epic": {
       "3.11": "CRW-5389",
       "3.12": "CRW-5680",
-      "3.13": "n/a",
+      "3.13": "CRW-6008",
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
