--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10564,3 +10564,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.13-10
+  taskId: 59872116
+  timeCreate: Wed Mar 20 05:22:23 2024
+  timeStart: Wed Mar 20 05:22:44 2024
+  timeFinish: Wed Mar 20 05:47:17 2024
+  timeWait: 0 mins
+  timeBuild: 24 mins
+  timeTotal: 24 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-43
+  taskId: 59873867
+  timeCreate: Wed Mar 20 06:11:01 2024
+  timeStart: Wed Mar 20 06:11:15 2024
+  timeFinish: Wed Mar 20 06:14:54 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
