chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10663,3 +10663,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-server-rhel8
+  tag: 3.13-6
+  taskId: 59950856
+  timeCreate: Fri Mar 22 13:26:03 2024
+  timeStart: Fri Mar 22 15:36:06 2024
+  timeFinish: Fri Mar 22 15:46:06 2024
+  timeWait: 130 mins
+  timeBuild: 10 mins
+  timeTotal: 140 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-48
+  taskId: 59955046
+  timeCreate: Fri Mar 22 15:59:30 2024
+  timeStart: Fri Mar 22 16:40:08 2024
+  timeFinish: Fri Mar 22 16:45:01 2024
+  timeWait: 40 mins
+  timeBuild: 4 mins
+  timeTotal: 45 mins
