--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10735,3 +10735,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-28
+  taskId: 59985012
+  timeCreate: Sun Mar 24 22:24:07 2024
+  timeStart: Sun Mar 24 22:24:27 2024
+  timeFinish: Sun Mar 24 22:33:00 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-52
+  taskId: 59985066
+  timeCreate: Sun Mar 24 22:39:45 2024
+  timeStart: Sun Mar 24 22:40:31 2024
+  timeFinish: Sun Mar 24 22:44:05 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
