--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10789,3 +10789,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.13-30
+  taskId: 59993067
+  timeCreate: Mon Mar 25 06:37:53 2024
+  timeStart: Mon Mar 25 06:38:30 2024
+  timeFinish: Mon Mar 25 06:46:48 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-55
+  taskId: 59993250
+  timeCreate: Mon Mar 25 07:02:34 2024
+  timeStart: Mon Mar 25 07:02:55 2024
+  timeFinish: Mon Mar 25 07:06:58 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
