chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -10807,3 +10807,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.13-6
+  taskId: 59993433
+  timeCreate: Mon Mar 25 11:33:59 2024
+  timeStart: Mon Mar 25 11:34:05 2024
+  timeFinish: Mon Mar 25 11:50:43 2024
+  timeWait: 0 mins
+  timeBuild: 16 mins
+  timeTotal: 16 mins
+- name: devspaces-operator-bundle
+  tag: 3.13-56
+  taskId: 59993594
+  timeCreate: Mon Mar 25 12:04:26 2024
+  timeStart: Mon Mar 25 12:04:55 2024
+  timeFinish: Mon Mar 25 12:09:12 2024
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 4 mins
